--- a/src/templates/index.twig
+++ b/src/templates/index.twig
@@ -22,15 +22,20 @@
 	</style>
 
 	<ul>
-		<li><a href="01_main.html">01. Main</a></li>
-		<li><a href="01_publishers-new-place.html">01. Publishers-new-place</a></li>
+		<li style="padding-top: 50px; padding-bottom: 10px; color: #00c9b3; text-decoration: underline;">GUEST</li>
 		<li><a href="01_guest-home.html">01. Guest home</a></li>
 		<li><a href="02_guest-publisher.html">02. Guest publisher</a></li>
-		<li><a href="02_publishers-messages.html">02.Publishers Messages</a></li>
 		<li><a href="03_guest-advertises.html">03. Guest advertises</a></li>
 		<li><a href="04_guest-contact-us.html">04. Guest contact us</a></li>
 		<li><a href="05_guest-login.html">05. Guest login</a></li>
 		<li><a href="06_guest-registration.html">06. Guest registration</a></li>
+
+		<li style="padding-top: 50px; padding-bottom: 10px; color: #00c9b3; text-decoration: underline;">PUBLISHERS</li>
+		<li><a href="01_publishers-new-place.html">01. Publishers new place</a></li>
+		<li><a href="02_publishers-messages.html">02.Publishers Messages</a></li>
+
+		<li style="padding-top: 50px; padding-bottom: 10px; color: #00c9b3; text-decoration: underline;">ADVERTISES</li>
+		<li><a href="01_publishers-advertisers.html">01. Publishers Advertises</a></li>
 
 	</ul>
 {% endblock %}
