--- a/src/templates/01_publishers-advertisers.twig
+++ b/src/templates/01_publishers-advertisers.twig
@@ -1,4 +1,4 @@
-{% extends 'parts/layout-main.twig' %}
+{% extends 'parts/layout-advertisers.twig' %}
 
 {% block title %}
 	<title>Publishers advertisers - ICEX Media</title>
