--- a/src/templates/02_publishers-messages.twig
+++ b/src/templates/02_publishers-messages.twig
@@ -1,5 +1,5 @@
 
-{% extends 'parts/layout.twig' %}
+{% extends 'parts/layout-publishers.twig' %}
 
 {% block title %}
 	<title>Publisher messages</title>
