--- a/src/templates/04_guest-contact-us.twig
+++ b/src/templates/04_guest-contact-us.twig
@@ -1,4 +1,4 @@
-{% extends 'parts/layout.twig' %}
+{% extends 'parts/layout-guest.twig' %}
 
 {% block title %}
 	<title>Contact us - ICEX Media</title>
