--- a/src/templates/parts/layout-advertisers.twig
+++ b/src/templates/parts/layout-advertisers.twig
@@ -17,14 +17,14 @@
 
 <div class="all-wrap">
 	{% block header %}
-		{% include 'parts/header.twig' %}
+		{% include 'parts/header-advertisers.twig' %}
 	{% endblock %}
 
 	{% block content %}
 	{% endblock %}
 
 	{% block footer %}
-		{% include 'parts/footer.twig' %}
+		{% include 'parts/footer-advertisers.twig' %}
 	{% endblock %}
 </div>
 
