--- a/src/templates/parts/layout-guest.twig
+++ b/src/templates/parts/layout-guest.twig
@@ -17,14 +17,14 @@
 
 <div class="all-wrap">
 	{% block header %}
-		{% include 'parts/headerMain.twig' %}
+		{% include 'parts/header-guest.twig' %}
 	{% endblock %}
 
 	{% block content %}
 	{% endblock %}
 
 	{% block footer %}
-		{% include 'parts/footerMain.twig' %}
+		{% include 'parts/footer-guest.twig' %}
 	{% endblock %}
 </div>
 
