--- a/src/templates/03_guest-advertises.twig
+++ b/src/templates/03_guest-advertises.twig
@@ -1,4 +1,4 @@
-{% extends 'parts/layout.twig' %}
+{% extends 'parts/layout-guest.twig' %}
 
 {% block title %}
 	<title>Guest advertises - ICEX Media</title>
