Add Publish places page

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -25,6 +25,7 @@
 
 	//PUBLISHERS
 	@import "blocks/publishers/publishers";
+	@import "blocks/publishers/places";
 
 	//GUEST
 	@import "blocks/guest/guest-publisher";
