--- a/src/css/blocks/publishers/publishers.less
+++ b/src/css/blocks/publishers/publishers.less
@@ -5,11 +5,9 @@
 		background-position: center center;
 		background-size: contain;
 
-		opacity: 0.7;
 	}
 	&__bg-darken {
-		background-color: #5E6267;
-		opacity: 0.9;
+		background-color: rgba(94, 98, 103, 0.9);
 	}
 	&__block {
 	}
@@ -80,12 +78,13 @@
 		&_mesages {
 			padding: 24px;
 		}
-
-
 	}
 	&__table-block-inner {
 		overflow: scroll;
 		max-height: 393px;
+		overflow-x: auto;
+		//.element::-webkit-scrollbar { width: 0; };
+		//.element { overflow: hidden; }
 	}
 	&__table-row {
 		margin-bottom: 42px;
@@ -116,5 +115,4 @@
 			width: 20%;
 		}
 	}
-
 }
