--- a/src/templates/index.twig
+++ b/src/templates/index.twig
@@ -28,6 +28,7 @@
 		<li><a href="02_guest-publisher.html">02. Guest publisher</a></li>
 		<li><a href="02_publishers-messages.html">02.Publishers Messages</a></li>
 		<li><a href="03_guest-advertises.html">03. Guest advertises</a></li>
+		<li><a href="03_publishers-paces.html">03. Publishers Paces</a></li>
 		<li><a href="04_guest-contact-us.html">04. Guest contact us</a></li>
 		<li><a href="06_guest-registration.html">06. Guest registration</a></li>
 
