--- a/src/css/form.less
+++ b/src/css/form.less
@@ -1,4 +1,5 @@
 .form {
+
 	&__input-holder {
 		margin-bottom: 18px;
 		width: 100%;
@@ -19,10 +20,9 @@
 		display: block;
 		width: 100%;
 		height: 61px;
-		background: #808286;
-		opacity: 0.7;
-		border: 1px solid #dadbdc;
-		padding: 22px;
+		border: 1px solid rgba(255, 255, 255, 0.9);
+		background: rgba(255, 255, 255, 0.2);
+		padding: 0 22px;
 
 		color: white;
 		.regular();
@@ -33,25 +33,23 @@
 
 		}
 		&::-webkit-input-placeholder {
-			color: white;
+			color: rgba(255, 255, 255, 0.5);
 			opacity: 1;
 		}
 		&::-moz-placeholder {
-			color: white;
+			color: rgba(255, 255, 255, 0.5);
 			opacity: 1;
 		}
 		&:-moz-placeholder {
-			color: white;
+			color: rgba(255, 255, 255, 0.5);
 			opacity: 1;
 		}
 		&:-ms-input-placeholder {
-			color: white;
+			color: rgba(255, 255, 255, 0.5);
 			opacity: 1;
 		}
 		&:focus {
-			border-color: black;
-			color: white;
-
+			border-color: @turquoise-color;
 		}
 		&_error {
 			border-color: #ff0000;
@@ -61,9 +59,8 @@
 		display: block;
 		width: 100%;
 		height: 225px;
-		background-color: #808286;
-		border-radius: 3px;
-		border: 1px solid transparent;
+		border: 1px solid rgba(255, 255, 255, 0.9);
+		background: rgba(255, 255, 255, 0.2);
 		padding: 10px 20px;
 
 		color: white;
@@ -72,48 +69,30 @@
 		-webkit-appearance: none;
 
 		&::-webkit-input-placeholder {
-			color: white;
+			color: rgba(255, 255, 255, 0.5);
 			opacity: 1;
 		}
 		&::-moz-placeholder {
-			color: white;
+			color: rgba(255, 255, 255, 0.5);
 			opacity: 1;
 		}
 		&:-moz-placeholder {
-			color: white;
+			color: rgba(255, 255, 255, 0.5);
 			opacity: 1;
 		}
 		&:-ms-input-placeholder {
-			color: white;
+			color: rgba(255, 255, 255, 0.5);
 			opacity: 1;
 		}
 		&:focus {
-			border-color: black;
-			color: white;
+			border-color: @turquoise-color;
 		}
 		&_error {
 			border-color: #ff0000;
 		}
 	}
 
-	&__captcha {
-		margin: 10px 0;
-		display: flex;
-		flex-direction: row;
-		justify-content: flex-end;
-		max-width: 100%;
-	}
 	&__submit {
 		text-align: right;
-	}
-}
-
-@media screen and (max-width: 770px) {
-	.form {
-		&__captcha {
-			&_mobile {
-				display: block;
-			}
-		}
 	}
 }
