--- a/src/css/main.less
+++ b/src/css/main.less
@@ -14,20 +14,18 @@
 	@import "blocks/info-box";
 	@import "blocks/footer";
 
-	//MAIN
-	@import "blocks/main/top-block";
-	@import "blocks/main/text-block";
-	@import "blocks/main/cta";
-	@import "blocks/main/features";
-	@import "blocks/main/text-slider";
-	@import "blocks/main/image-block";
-
 
 	//PUBLISHERS
 	@import "blocks/publishers/publishers";
 	@import "blocks/publishers/places";
 
 	//GUEST
+	@import "blocks/guest/top-block";
+	@import "blocks/guest/text-block";
+	@import "blocks/guest/cta";
+	@import "blocks/guest/features";
+	@import "blocks/guest/text-slider";
+	@import "blocks/guest/image-block";
 	@import "blocks/guest/guest-publisher";
 	@import "blocks/guest/guest-home";
 	@import "blocks/guest/guest-advertises";
@@ -35,6 +33,10 @@
 	@import "blocks/guest/guest-form";
 	@import "blocks/guest/guest-reg";
 	@import "blocks/guest/guest-login";
+
+	//ADVERTISERS
+	@import "blocks/advertisers/new-add-adv";
+	@import "blocks/advertisers/home-adv";
 
 
 
