--- a/src/templates/parts/layout-advertisers.twig
+++ b/src/templates/parts/layout-advertisers.twig
@@ -26,6 +26,9 @@
 	{% block footer %}
 		{% include 'parts/footer-advertisers.twig' %}
 	{% endblock %}
+
+	{% block userscripts %}
+	{% endblock %}
 </div>
 
 <!-- uncache -->
