--- a/src/css/buttons.less
+++ b/src/css/buttons.less
@@ -3,25 +3,37 @@
 	vertical-align: top;
 	height: 61px;
 	padding: 0 231px;
-	border: 1px solid #4a7c7b;
-	background: #45938d;
-	//border-radius: @3;
-	//box-shadow: 0 @9 @34 rgba(31, 29, 38, 0.8);
+	border: 1px solid rgba(62, 184, 144, 0.5);
+	background: rgba(62, 184, 144, 0.5);
 	cursor: pointer;
 	position: relative;
 
 	color: white;
-
 	font-size: @16;
 	line-height: 66px;
+
 	text-transform: uppercase;
 	text-decoration: none;
-	overflow: hidden;
+	transition: all .3s ease;
+
+	-webkit-appearance: none;
+
+	.no-touchevents & {
+		&:hover {
+			background: @turquoise-color;
+			filter: drop-shadow(0 0 4px @turquoise-color);
+		}
+	}
 
 	&_dark {
 		background-color: #383542;
-		&:hover {
-			transition: background-color .2s ease;
+		.no-touchevents & {
+			&:hover {
+				transition: background-color .2s ease;
+				background-color: #45938d;
+			}
+		}
+		&:active {
 			background-color: #45938d;
 		}
 	}
@@ -34,100 +46,5 @@
 		padding-left: 0;
 		padding-right: 0;
 		text-align: center;
-	}
-
-	&_loading {
-		background: #383542;
-		box-shadow: inset 0 @9 @34 rgba(31, 29, 38, 0.8);
-		cursor: default;
-	}
-
-	&__front {
-		position: relative;
-		transition: all .2s ease;
-		top: 0;
-		.btn:hover & {
-			top: -100%;
-		}
-		.btn_loading & {
-			top: -100%;
-		}
-	}
-	&__icon {
-		position: absolute;
-		top: -100%;
-		left: 0;
-		right: 0;
-		height: 100%;
-		transition: all .2s ease;
-		.btn:hover & {
-			top: 0;
-		}
-		.btn_loading & {
-			top: 0;
-		}
-		&:before {
-			content: "";
-			position: absolute;
-			left: 50%;
-			top: 50%;
-			margin-left: -20px;
-			margin-top: -20px;
-			width: 40px;
-			height: 40px;
-			background-repeat: no-repeat;
-			background-size: 40px 40px;
-		}
-		&_comment:before {
-			background-image: svg('ei#comment', '[fill]: #ffffff');
-		}
-		&_refresh:before {
-			background-image: svg('ei#refresh', '[fill]: #ffffff');
-		}
-		&_send:before {
-			background-image: svg('ei#envelope', '[fill]: #ffffff');
-			.btn_loading & {
-				animation: translate 1s infinite;
-			}
-
-			@keyframes translate {
-				from {
-					transform: translateX(-120px);
-				}
-				to {
-					transform: translateX(120px);
-				}
-			}
-		}
-	}
-}
-
-@media screen and (max-width: 480px) {
-	.btn {
-		height: @38;
-		padding: 0 @18;
-
-		font-size: @14;
-		line-height: @38;
-
-		&_dark {
-			&:hover {
-				background-color: #383542;
-			}
-			&:active {
-				background-color: #45938d;
-			}
-		}
-
-		&__front {
-			.btn:hover & {
-				top: 0;
-			}
-		}
-		&__icon {
-			.btn:hover & {
-				top: -100%;
-			}
-		}
 	}
 }
