Add Publishers payment page

--- a/src/css/blocks/publishers/publishers.less
+++ b/src/css/blocks/publishers/publishers.less
@@ -1,9 +1,9 @@
 .publishers {
 
-	&_bg {
+	&__bg {
 		background-repeat: no-repeat;
 		background-position: center center;
-		background-size: contain;
+		background-size: cover;
 
 	}
 	&__bg-darken {
