--- a/src/css/main.less
+++ b/src/css/main.less
@@ -26,6 +26,8 @@
 	//PUBLISHERS
 	@import "blocks/publishers/publishers";
 	@import "blocks/publishers/places";
+	@import "blocks/publishers/paymen-info";
+	@import "blocks/publishers/payments-list";
 
 	//GUEST
 	@import "blocks/guest/guest-publisher";
