--- a/src/templates/03_publishers-places.twig
+++ b/src/templates/03_publishers-places.twig
@@ -1,5 +1,5 @@
 
-{% extends 'parts/layout.twig' %}
+{% extends 'parts/layout-publishers.twig' %}
 
 {% block title %}
 	<title>Publisher New Place</title>
@@ -31,7 +31,8 @@
 							</div>
 							<div class="places__table-block">
 							</div>
-							<a href="#" class="places__export">Export data to a CSV file</a>
+							<a href="#" class="places__export"></a>
+						</div>
 						{#/YOU PLACES#}
 
 					</div>
