--- a/src/templates/index.twig
+++ b/src/templates/index.twig
@@ -35,6 +35,7 @@
 		<li><a href="02_publishers-messages.html">02.Publishers Messages</a></li>
 		<li><a href="03_publishers-places.html">03. Publishers Places</a></li>
 		<li><a href="04_publishers-payments.html">04.Publishers Payments</a></li>
+		<li><a href="05_publishers-edit-account.html">05. Publishers Edita Acount</a></li>
 
 		<li style="padding-top: 50px; padding-bottom: 10px; color: #00c9b3; text-decoration: underline;">ADVERTISERS</li>
 		<li><a href="01_publishers-advertisers.html">01. Publishers Advertises</a></li>
