Add Edit account page

--- a/src/templates/02_publishers-messages.twig
+++ b/src/templates/02_publishers-messages.twig
@@ -8,7 +8,7 @@
 
 {% block content %}
 
-	{#PUBLISHERS#}
+	{#MESSAGES#}
 	<div class="publishers">
 		<div class="publishers__bg" style="background-image: url(img/publish_bg.jpg)">
 			<div class="publishers__bg-darken">
@@ -28,7 +28,7 @@
 								<div class="publishers__form-item">
 									<span class="publishers__form-text">Text</span>
 									<div class="form__input-holder">
-										<input type="text" class="form__input" placeholder="Text">
+										<textarea class="form__textarea" placeholder="Text"></textarea>
 									</div>
 								</div>
 								<div class="publishers__form-item">
@@ -61,6 +61,6 @@
 			</div>
 		</div>
 	</div>
-	{#/PUBLISHERS#}
+	{#/MESSAGES#}
 
 {% endblock %}
