--- a/src/templates/03_publishers-places.twig
+++ b/src/templates/03_publishers-places.twig
@@ -8,7 +8,7 @@
 
 {% block content %}
 
-	{#PUBLISHERS#}
+	{#NEW PLACE#}
 	<div class="publishers">
 		<div class="publishers__bg" style="background-image: url(img/publish_bg.jpg)">
 			<div class="publishers__bg-darken">
@@ -118,6 +118,6 @@
 			</div>
 		</div>
 	</div>
-	{#/PUBLISHERS#}
+	{#/NEW PLACE#}
 
 {% endblock %}
