--- a/src/templates/04_publishers-payments.twig
+++ b/src/templates/04_publishers-payments.twig
@@ -2,13 +2,13 @@
 {% extends 'parts/layout-publishers.twig' %}
 
 {% block title %}
-	<title>Publisher Payments</title>
+	<title>Publishers Payments</title>
 {% endblock %}
 
 
 {% block content %}
 
-	{#PUBLISHERS#}
+	{#PAYMENTS#}
 	<div class="publishers">
 		<div class="publishers__bg" style="background-image: url(img/publish_bg.jpg)">
 			<div class="publishers__bg-darken">
@@ -33,121 +33,121 @@
 						</div>
 						{#/PAYMENT INFO#}
 
-						<div class="publishers__block">
-							<div class="publishers__title">List of Payment Periods</div>
+					</div>
+					<div class="publishers__block">
+						<div class="publishers__title">List of Payment Periods</div>
 
-							{#PAYMENTS TABLE#}
-							<div class="payments-list">
-								<div class="payments-list__title">
-									<div class="payments-list__title-item payments-list__title-item_1">Start date</div>
-									<div class="payments-list__title-item payments-list__title-item_2">End date</div>
-									<div class="payments-list__title-item payments-list__title-item_3">Earned</div>
-									<div class="payments-list__title-item payments-list__title-item_4">
-										Moved from previous periods
-									</div>
-									<div class="payments-list__title-item payments-list__title-item_5">
-										Total amount
-									</div>
-									<div class="payments-list__title-item payments-list__title-item_6">Payment date</div>
-									<div class="payments-list__title-item payments-list__title-item_7">Moved to
-										next period
-									</div>
+						{#PAYMENTS TABLE#}
+						<div class="payments-list">
+							<div class="payments-list__title">
+								<div class="payments-list__title-item payments-list__title-item_1">Start date</div>
+								<div class="payments-list__title-item payments-list__title-item_2">End date</div>
+								<div class="payments-list__title-item payments-list__title-item_3">Earned</div>
+								<div class="payments-list__title-item payments-list__title-item_4">
+									Moved from previous periods
 								</div>
-								<div class="payments-list__block">
-									<div class="payments-list__inner">
-										<div class="payments-list__table-row">
-											<p class="payments-list__col payments-list__col_1">11/01/2017</p>
-											<p class="payments-list__col payments-list__col_2">11/30/2017</p>
-											<p class="payments-list__col payments-list__col_3">$0.00</p>
-											<p class="payments-list__col payments-list__col_4">$0.00</p>
-											<p class="payments-list__col payments-list__col_5">$0.00</p>
-											<p class="payments-list__col payments-list__col_6">N/A</p>
-											<p class="payments-list__col payments-list__col_7">$0.00</p>
-										</div>
-										<div class="payments-list__table-row">
-											<p class="payments-list__col payments-list__col_1">11/01/2017</p>
-											<p class="payments-list__col payments-list__col_2">11/30/2017</p>
-											<p class="payments-list__col payments-list__col_3">$0.00</p>
-											<p class="payments-list__col payments-list__col_4">$0.00</p>
-											<p class="payments-list__col payments-list__col_5">$0.00</p>
-											<p class="payments-list__col payments-list__col_6">N/A</p>
-											<p class="payments-list__col payments-list__col_7">$0.00</p>
-										</div>
-										<div class="payments-list__table-row">
-											<p class="payments-list__col payments-list__col_1">11/01/2017</p>
-											<p class="payments-list__col payments-list__col_2">11/30/2017</p>
-											<p class="payments-list__col payments-list__col_3">$0.00</p>
-											<p class="payments-list__col payments-list__col_4">$0.00</p>
-											<p class="payments-list__col payments-list__col_5">$0.00</p>
-											<p class="payments-list__col payments-list__col_6">N/A</p>
-											<p class="payments-list__col payments-list__col_7">$0.00</p>
-										</div>
-										<div class="payments-list__table-row">
-											<p class="payments-list__col payments-list__col_1">11/01/2017</p>
-											<p class="payments-list__col payments-list__col_2">11/30/2017</p>
-											<p class="payments-list__col payments-list__col_3">$0.00</p>
-											<p class="payments-list__col payments-list__col_4">$0.00</p>
-											<p class="payments-list__col payments-list__col_5">$0.00</p>
-											<p class="payments-list__col payments-list__col_6">N/A</p>
-											<p class="payments-list__col payments-list__col_7">$0.00</p>
-										</div>
-										<div class="payments-list__table-row">
-											<p class="payments-list__col payments-list__col_1">11/01/2017</p>
-											<p class="payments-list__col payments-list__col_2">11/30/2017</p>
-											<p class="payments-list__col payments-list__col_3">$0.00</p>
-											<p class="payments-list__col payments-list__col_4">$0.00</p>
-											<p class="payments-list__col payments-list__col_5">$0.00</p>
-											<p class="payments-list__col payments-list__col_6">N/A</p>
-											<p class="payments-list__col payments-list__col_7">$0.00</p>
-										</div>
-										<div class="payments-list__table-row">
-											<p class="payments-list__col payments-list__col_1">11/01/2017</p>
-											<p class="payments-list__col payments-list__col_2">11/30/2017</p>
-											<p class="payments-list__col payments-list__col_3">$0.00</p>
-											<p class="payments-list__col payments-list__col_4">$0.00</p>
-											<p class="payments-list__col payments-list__col_5">$0.00</p>
-											<p class="payments-list__col payments-list__col_6">N/A</p>
-											<p class="payments-list__col payments-list__col_7">$0.00</p>
-										</div>
-										<div class="payments-list__table-row">
-											<p class="payments-list__col payments-list__col_1">11/01/2017</p>
-											<p class="payments-list__col payments-list__col_2">11/30/2017</p>
-											<p class="payments-list__col payments-list__col_3">$0.00</p>
-											<p class="payments-list__col payments-list__col_4">$0.00</p>
-											<p class="payments-list__col payments-list__col_5">$0.00</p>
-											<p class="payments-list__col payments-list__col_6">N/A</p>
-											<p class="payments-list__col payments-list__col_7">$0.00</p>
-										</div>
-										<div class="payments-list__table-row">
-											<p class="payments-list__col payments-list__col_1">11/01/2017</p>
-											<p class="payments-list__col payments-list__col_2">11/30/2017</p>
-											<p class="payments-list__col payments-list__col_3">$0.00</p>
-											<p class="payments-list__col payments-list__col_4">$0.00</p>
-											<p class="payments-list__col payments-list__col_5">$0.00</p>
-											<p class="payments-list__col payments-list__col_6">N/A</p>
-											<p class="payments-list__col payments-list__col_7">$0.00</p>
-										</div>
-										<div class="payments-list__table-row">
-											<p class="payments-list__col payments-list__col_1">11/01/2017</p>
-											<p class="payments-list__col payments-list__col_2">11/30/2017</p>
-											<p class="payments-list__col payments-list__col_3">$0.00</p>
-											<p class="payments-list__col payments-list__col_4">$0.00</p>
-											<p class="payments-list__col payments-list__col_5">$0.00</p>
-											<p class="payments-list__col payments-list__col_6">N/A</p>
-											<p class="payments-list__col payments-list__col_7">$0.00</p>
-										</div>
-
-									</div>
+								<div class="payments-list__title-item payments-list__title-item_5">
+									Total amount
+								</div>
+								<div class="payments-list__title-item payments-list__title-item_6">Payment date</div>
+								<div class="payments-list__title-item payments-list__title-item_7">Moved to
+									next period
 								</div>
 							</div>
-							{#/PAYMENTS TABLE#}
+							<div class="payments-list__block">
+								<div class="payments-list__inner">
+									<div class="payments-list__table-row">
+										<p class="payments-list__col payments-list__col_1">11/01/2017</p>
+										<p class="payments-list__col payments-list__col_2">11/30/2017</p>
+										<p class="payments-list__col payments-list__col_3">$0.00</p>
+										<p class="payments-list__col payments-list__col_4">$0.00</p>
+										<p class="payments-list__col payments-list__col_5">$0.00</p>
+										<p class="payments-list__col payments-list__col_6">N/A</p>
+										<p class="payments-list__col payments-list__col_7">$0.00</p>
+									</div>
+									<div class="payments-list__table-row">
+										<p class="payments-list__col payments-list__col_1">11/01/2017</p>
+										<p class="payments-list__col payments-list__col_2">11/30/2017</p>
+										<p class="payments-list__col payments-list__col_3">$0.00</p>
+										<p class="payments-list__col payments-list__col_4">$0.00</p>
+										<p class="payments-list__col payments-list__col_5">$0.00</p>
+										<p class="payments-list__col payments-list__col_6">N/A</p>
+										<p class="payments-list__col payments-list__col_7">$0.00</p>
+									</div>
+									<div class="payments-list__table-row">
+										<p class="payments-list__col payments-list__col_1">11/01/2017</p>
+										<p class="payments-list__col payments-list__col_2">11/30/2017</p>
+										<p class="payments-list__col payments-list__col_3">$0.00</p>
+										<p class="payments-list__col payments-list__col_4">$0.00</p>
+										<p class="payments-list__col payments-list__col_5">$0.00</p>
+										<p class="payments-list__col payments-list__col_6">N/A</p>
+										<p class="payments-list__col payments-list__col_7">$0.00</p>
+									</div>
+									<div class="payments-list__table-row">
+										<p class="payments-list__col payments-list__col_1">11/01/2017</p>
+										<p class="payments-list__col payments-list__col_2">11/30/2017</p>
+										<p class="payments-list__col payments-list__col_3">$0.00</p>
+										<p class="payments-list__col payments-list__col_4">$0.00</p>
+										<p class="payments-list__col payments-list__col_5">$0.00</p>
+										<p class="payments-list__col payments-list__col_6">N/A</p>
+										<p class="payments-list__col payments-list__col_7">$0.00</p>
+									</div>
+									<div class="payments-list__table-row">
+										<p class="payments-list__col payments-list__col_1">11/01/2017</p>
+										<p class="payments-list__col payments-list__col_2">11/30/2017</p>
+										<p class="payments-list__col payments-list__col_3">$0.00</p>
+										<p class="payments-list__col payments-list__col_4">$0.00</p>
+										<p class="payments-list__col payments-list__col_5">$0.00</p>
+										<p class="payments-list__col payments-list__col_6">N/A</p>
+										<p class="payments-list__col payments-list__col_7">$0.00</p>
+									</div>
+									<div class="payments-list__table-row">
+										<p class="payments-list__col payments-list__col_1">11/01/2017</p>
+										<p class="payments-list__col payments-list__col_2">11/30/2017</p>
+										<p class="payments-list__col payments-list__col_3">$0.00</p>
+										<p class="payments-list__col payments-list__col_4">$0.00</p>
+										<p class="payments-list__col payments-list__col_5">$0.00</p>
+										<p class="payments-list__col payments-list__col_6">N/A</p>
+										<p class="payments-list__col payments-list__col_7">$0.00</p>
+									</div>
+									<div class="payments-list__table-row">
+										<p class="payments-list__col payments-list__col_1">11/01/2017</p>
+										<p class="payments-list__col payments-list__col_2">11/30/2017</p>
+										<p class="payments-list__col payments-list__col_3">$0.00</p>
+										<p class="payments-list__col payments-list__col_4">$0.00</p>
+										<p class="payments-list__col payments-list__col_5">$0.00</p>
+										<p class="payments-list__col payments-list__col_6">N/A</p>
+										<p class="payments-list__col payments-list__col_7">$0.00</p>
+									</div>
+									<div class="payments-list__table-row">
+										<p class="payments-list__col payments-list__col_1">11/01/2017</p>
+										<p class="payments-list__col payments-list__col_2">11/30/2017</p>
+										<p class="payments-list__col payments-list__col_3">$0.00</p>
+										<p class="payments-list__col payments-list__col_4">$0.00</p>
+										<p class="payments-list__col payments-list__col_5">$0.00</p>
+										<p class="payments-list__col payments-list__col_6">N/A</p>
+										<p class="payments-list__col payments-list__col_7">$0.00</p>
+									</div>
+									<div class="payments-list__table-row">
+										<p class="payments-list__col payments-list__col_1">11/01/2017</p>
+										<p class="payments-list__col payments-list__col_2">11/30/2017</p>
+										<p class="payments-list__col payments-list__col_3">$0.00</p>
+										<p class="payments-list__col payments-list__col_4">$0.00</p>
+										<p class="payments-list__col payments-list__col_5">$0.00</p>
+										<p class="payments-list__col payments-list__col_6">N/A</p>
+										<p class="payments-list__col payments-list__col_7">$0.00</p>
+									</div>
 
+								</div>
+							</div>
 						</div>
+						{#/PAYMENTS TABLE#}
+
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-	{#/PUBLISHERS#}
+	{#/PAYMENTS#}
 
 {% endblock %}
