--- a/src/css/form.less
+++ b/src/css/form.less
@@ -15,6 +15,14 @@
 				pointer-events: none;
 			}
 		}
+		&_mini {
+			width: 301px;
+		}
+		&_check {
+			text-align: right;
+			width: 200px;
+			padding-top: 17px;
+		}
 	}
 	&__input {
 		display: block;
@@ -68,6 +76,9 @@
 		font-size: @14;
 		-webkit-appearance: none;
 
+		&_publishers {
+			height: 181px;
+		}
 		&::-webkit-input-placeholder {
 			color: rgba(255, 255, 255, 0.5);
 			opacity: 1;
