--- a/src/css/main.less
+++ b/src/css/main.less
@@ -7,6 +7,7 @@
 
 @import "swiper";
 @import "icheck";
+@import "jquery.mCustomScrollbar.less";
 
 
 	//BLOCKS
@@ -37,6 +38,9 @@
 	//ADVERTISERS
 	@import "blocks/advertisers/new-add-adv";
 	@import "blocks/advertisers/home-adv";
+	@import "blocks/advertisers/pub-adv";
+	@import "blocks/advertisers/adv-table";
+	@import "blocks/advertisers/std-adv";
 
 
 
