--- a/src/templates/01_publishers-advertisers.twig
+++ b/src/templates/01_publishers-advertisers.twig
@@ -6,5 +6,15 @@
 
 
 {% block content %}
+	{#PUBLISHERS ADVERTISERS#}
+	<div class="pub-adv" style="background-image: url(img/contact-us-bg.jpg)">
+		<div class="pub-adv__container container">
+			<h1 class="pub-adv__title">Our Publishers</h1>
+			<p class="pub-adv__subtitle">Your ads can be displayed on the following sites</p>
+			<div class="pub-adv__content">
 
+			</div>
+		</div>
+	</div>
+	{#/PUBLISHERS ADVERTISERS#}
 {% endblock %}
