--- a/src/templates/parts/header-advertisers.twig
+++ b/src/templates/parts/header-advertisers.twig
@@ -25,6 +25,14 @@
 				</div>
 
 
+				<div class="header__nav-item header__nav-item_login js-header-nav-item-trigger">
+					<a href="#" class="header__nav-item-text">Kalista</a>
+					<i class="header__nav-item-icon"></i>
+					<div class="header__nav-item-dropdown js-header-nav-item-dropdown">
+						<a href="#" class="header__nav-item-dropdown-link">Edit Account</a>
+						<a href="#" class="header__nav-item-dropdown-link">Log Off</a>
+					</div>
+				</div>
 				<a href="#" class="header__nav-item">Home</a>
 				<a href="#" class="header__nav-item">Ads</a>
 				<a href="#" class="header__nav-item">Campaigns</a>
