--- a/src/templates/index.twig
+++ b/src/templates/index.twig
@@ -39,6 +39,7 @@
 		<li style="padding-top: 50px; padding-bottom: 10px; color: #00c9b3; text-decoration: underline;">ADVERTISERS</li>
 		<li><a href="01_publishers-advertisers.html">01. Publishers Advertises</a></li>
 		<li><a href="02_new-add-advertisers.html">02. New Add Advertises</a></li>
+		<li><a href="03_ads-advertisers.html">03. Ads Advertises</a></li>
 		<li><a href="11_home-advertisers.html">11. Home Advertises</a></li>
 
 	</ul>
