--- a/src/css/init.less
+++ b/src/css/init.less
@@ -53,6 +53,8 @@ table {border-collapse: collapse; border-spacing: 0;}
 	width: 100%;
 	margin-left: auto;
 	margin-right: auto;
+	padding-left: 20px;
+	padding-right: 20px;
 }
 
 body {
