--- a/src/css/main.less
+++ b/src/css/main.less
@@ -20,6 +20,7 @@
 	@import "blocks/publishers/places";
 	@import "blocks/publishers/paymen-info";
 	@import "blocks/publishers/payments-list";
+	@import "blocks/publishers/up-arrow";
 
 	//GUEST
 	@import "blocks/guest/top-block";
