--- a/src/templates/parts/layout-publishers.twig
+++ b/src/templates/parts/layout-publishers.twig
@@ -26,6 +26,9 @@
 	{% block footer %}
 		{% include 'parts/footer-publishers.twig' %}
 	{% endblock %}
+
+	<div class="up-arrow"></div>
+
 </div>
 
 <!-- uncache -->
