--- a/src/templates/parts/header-publishers.twig
+++ b/src/templates/parts/header-publishers.twig
@@ -25,6 +25,14 @@
 				</div>
 
 
+				<div class="header__nav-item header__nav-item_login js-header-nav-item-trigger">
+					<a href="#" class="header__nav-item-text">Kalista</a>
+					<i class="header__nav-item-icon"></i>
+					<div class="header__nav-item-dropdown js-header-nav-item-dropdown">
+						<a href="#" class="header__nav-item-dropdown-link">Edit Account</a>
+						<a href="#" class="header__nav-item-dropdown-link">Log Off</a>
+					</div>
+				</div>
 				<a href="#" class="header__nav-item">Home</a>
 				<a href="#" class="header__nav-item">Places</a>
 				<a href="#" class="header__nav-item">New Place</a>
@@ -38,6 +46,10 @@
 
 		{#RIGHT PART#}
 		<div class="header__right-part">
+			<a href="#" class="header__add-new">
+				<i class="header__add-new-icon"></i>
+				<span class="header__add-new-text">New Ad</span>
+			</a>
 			<a href="#" class="header__login">
 				<i class="header__login-icon"></i>
 				<span class="header__login-text">Kalista</span>
