--- a/src/templates/11_home-advertisers.twig
+++ b/src/templates/11_home-advertisers.twig
@@ -11,7 +11,7 @@
 		<div class="home-adv__container container">
 			<h1 class="home-adv__title">Welcome back !</h1>
 			<div class="home-adv__content">
-				<div class="home-adv__chart" id="home-adv-chart" style="width: 100%; height: 500px;"></div>
+				<div class="home-adv__chart" id="home-adv-chart" style="height: 500px;"></div>
 			</div>
 			<p class="home-adv__subtitle">Countries where your ads have been displayed in December 2017</p>
 		</div>
@@ -26,43 +26,89 @@
 			google.charts.load('current', {'packages':['corechart']});
 			google.charts.setOnLoadCallback(drawChart);
 
-			console.log("!");
-
 			function drawChart() {
 				var data = google.visualization.arrayToDataTable([
-					['Year', 'Sales'],
-					['2013',  1000],
-					['2014',  1170],
-					['2015',  660],
-					['2016',  1030]
+					[
+						{label: 'Year', id: 'year'},
+						{label: 'Sales', id: 'Sales', type: 'number'}, // Use object notation to explicitly specify the data type.
+					],
+					['2013', 2000],
+					['2014', 400],
+					['2015', 1000],
+					['2016', 2000],
+					['2016', 500],
+					['2016', 300],
+					['2016', 1200],
+					['2016', 1568],
 				]);
 
 				var options = {
-					hAxis: {title: 'Year',  titleTextStyle: {color: '#ffffff'}},
-					vAxis: {minValue: 0},
-					backgroundColor: { fill:'transparent' },
-					chartArea: {
-						backgroundColor: {
-							gradient: {
-								// Start color for gradient.
-								color1: '#fbf6a7',
-								// Finish color for gradient.
-								color2: '#33b679',
-								// Where on the boundary to start and
-								// end the color1/color2 gradient,
-								// relative to the upper left corner
-								// of the boundary.
-								x1: '0%', y1: '0%',
-								x2: '100%', y2: '100%',
-								// If true, the boundary for x1,
-								// y1, x2, and y2 is the box. If
-								// false, it's the entire chart.
-							}
+					legend: {
+						position: 'none'
+					},
+
+					hAxis: {
+						title: 'Year',
+						titleTextStyle: {
+							color: '#ffffff'
+						},
+						textStyle: {
+							color: '#fff',
+						},
+						gridlines: {
+							color: '#ffffff',
+							count: -1,
+						},
+					},
+					vAxis: {
+						minValue: 0,
+						gridlines: {
+							color: '#ffffff',
+							count: -1,
+						},
+						textStyle: {
+							color: '#fff',
 						}
-					}
+					},
+					backgroundColor: { fill:'transparent' },
+					colors: ['#fff'],
+					chartArea: {
+						// 'width': '90%',
+						'height': '80%',
+						top: 10,
+						left: 80,
+						right: 80,
+					},
 				};
 				// Instantiate and draw our chart, passing in some options.
 				var chart = new google.visualization.AreaChart(document.getElementById('home-adv-chart'));
+
+				var createSVG  = function(n,a,b){
+					var xmlns = "http://www.w3.org/2000/svg",
+						e     = document.createElementNS (xmlns, n);
+					for(var k in a){
+						e.setAttributeNS (null, k,a[k]);
+					}
+					for(var k in b){
+						e.setAttribute (k,b[k]);
+					}
+					return e;
+				};
+
+				google.visualization.events.addListener(chart, 'ready', function(){
+
+					var gradient = createSVG('linearGradient',{
+							x1:0,y1:0,x2:0,y2:1
+						},{
+							id:'fx'
+						}
+					);
+					document.getElementById('home-adv-chart')
+						.querySelector('svg>defs').appendChild(gradient);
+					gradient.appendChild(createSVG('stop',{offset:'0%'}));
+					gradient.appendChild(createSVG('stop',{offset:'100%'}));
+				});
+
 				chart.draw(data, options);
 			}
 		})();
