Add some fixes. (hover up-arrow, table..)

--- a/src/css/blocks/publishers/publishers.less
+++ b/src/css/blocks/publishers/publishers.less
@@ -156,37 +156,36 @@
 		padding-bottom: 65px;
 	}
 	&__table-title {
-		padding-left: 59px;
-		//padding-right: 65px;
+		display: flex;
 		padding-bottom: 29px;
 	}
 	&__th {
-		display: inline-block;
 		color: white;
 		.medium();
 		font-size: @14;
-		width: 34%;
 		line-height: 1.29;
+		text-align: center;
+		width: 34%;
 		&:first-child {
 			width: 28%;
 		}
 		&:last-child {
-			text-align: center;
+			width: 38%;
 		}
 	}
 	&__table-block {
 		border: 1px solid white;
-		padding: 22px 0/*65px*/ 55px 59px;
+		padding: 22px 0 55px 0;
 		&_mesages {
 			padding: 24px;
 		}
+		overflow: hidden;
 	}
 	&__table-block-inner {
-		overflow: scroll;
+		overflow: auto;
 		max-height: 393px;
-		overflow-x: auto;
-		//.element::-webkit-scrollbar { width: 0; };
-		//.element { overflow: hidden; }
+		overflow-x: hidden;
+		margin-right: -20px;
 	}
 	&__table-row {
 		margin-bottom: 42px;
@@ -199,11 +198,11 @@
 		.regular();
 	}
 	&__col {
-		//display: inline-block;
 		.light();
 		font-size: 14px;
 		line-height: 1.29;
 		color: #ffffff;
+		text-align: center;
 		&_1 {
 			width: 28%;
 		}
@@ -211,10 +210,14 @@
 			width: 34%;
 		}
 		&_3 {
-			width: 18%;
+			width: 38%;
+			display: flex;
 		}
 		&_4 {
-			width: 20%;
+			width: 46%;
+		}
+		&_5 {
+			width: 54%;
 		}
 	}
 }
