--- a/src/css/init.less
+++ b/src/css/init.less
@@ -57,6 +57,15 @@ table {border-collapse: collapse; border-spacing: 0;}
 	padding-right: 20px;
 }
 
+.container-export {
+	max-width: 330px;
+	width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+	padding-left: 20px;
+	padding-right: 20px;
+}
+
 body {
 	min-width: 320px;
 	color: #222;
