--- a/src/templates/03_publishers-places.twig
+++ b/src/templates/03_publishers-places.twig
@@ -51,62 +51,74 @@
 									<div class="publishers__table-row">
 										<p class="publishers__col publishers__col_1">Zone Banners 468x60 example</p>
 										<p class="publishers__col publishers__col_2">Banners Full Size 468x60</p>
-										<p class="publishers__col publishers__col_3">$0.60/10 clicks </p>
-										<p class="publishers__col publishers__col_4">$0.60/500 impressions</p>
+										<div class="publishers__col publishers__col_3">
+											<p class="publishers__col publishers__col_4">$0.60/10 clicks </p>
+											<p class="publishers__col publishers__col_5">$0.60/500 impressions</p>
+										</div>
 									</div>
 									<div class="publishers__table-row">
 										<p class="publishers__col publishers__col_1">Zone Banners 468x60 example</p>
 										<p class="publishers__col publishers__col_2">Banners Half Size 234x60</p>
-										<p class="publishers__col publishers__col_3">$0.60/10 clicks </p>
-										<p class="publishers__col publishers__col_4">$0.60/500 impressions</p>
+										<div class="publishers__col publishers__col_3">
+											<p class="publishers__col publishers__col_4">$0.60/10 clicks </p>
+											<p class="publishers__col publishers__col_5">$0.60/500 impressions</p>
+										</div>
 									</div>
 									<div class="publishers__table-row">
 										<p class="publishers__col publishers__col_1">Zone Banners 468x60 example</p>
 										<p class="publishers__col publishers__col_2">Banners Vertical 120x240</p>
-										<p class="publishers__col publishers__col_3">$0.60/10 clicks </p>
-										<p class="publishers__col publishers__col_4">$0.60/500 impressions</p>
+										<div class="publishers__col publishers__col_3">
+											<p class="publishers__col publishers__col_4">$0.60/10 clicks </p>
+											<p class="publishers__col publishers__col_5">$0.60/500 impressions</p>
+										</div>
 									</div>
 									<div class="publishers__table-row">
 										<p class="publishers__col publishers__col_1">Zone Banners 468x60 example</p>
 										<p class="publishers__col publishers__col_2">Banners Vertical Tower 160x600</p>
-										<p class="publishers__col publishers__col_3">$0.60/10 clicks </p>
-										<p class="publishers__col publishers__col_4">$0.60/500 impressions</p>
+										<div class="publishers__col publishers__col_3">
+											<p class="publishers__col publishers__col_4">$0.60/10 clicks </p>
+											<p class="publishers__col publishers__col_5">$0.60/500 impressions</p>
+										</div>
 									</div>
 									<div class="publishers__table-row">
 										<p class="publishers__col publishers__col_1">Zone Banners 468x60 example</p>
 										<p class="publishers__col publishers__col_2">Button 120x90</p>
-										<p class="publishers__col publishers__col_3">$0.60/10 clicks </p>
-										<p class="publishers__col publishers__col_4">$0.60/500 impressions</p>
+										<div class="publishers__col publishers__col_3">
+											<p class="publishers__col publishers__col_4">$0.60/10 clicks </p>
+											<p class="publishers__col publishers__col_5">$0.60/500 impressions</p>
+										</div>
 									</div>
 									<div class="publishers__table-row">
 										<p class="publishers__col publishers__col_1">Zone Banners 468x60 example</p>
 										<p class="publishers__col publishers__col_2">Button 88x31</p>
-										<p class="publishers__col publishers__col_3">$0.60/10 clicks </p>
-										<p class="publishers__col publishers__col_4">$0.60/500 impressions</p>
+										<div class="publishers__col publishers__col_3">
+											<p class="publishers__col publishers__col_4">$0.60/10 clicks </p>
+											<p class="publishers__col publishers__col_5">$0.60/500 impressions</p>
+										</div>
 									</div>
 									<div class="publishers__table-row">
 										<p class="publishers__col publishers__col_1">Zone Banners 468x60 example</p>
 										<p class="publishers__col publishers__col_2">Complete Page 800x600</p>
-										<p class="publishers__col publishers__col_3">$0.60/10 clicks </p>
-										<p class="publishers__col publishers__col_4">$0.60/500 impressions</p>
+										<div class="publishers__col publishers__col_3">
+											<p class="publishers__col publishers__col_4">$0.60/10 clicks </p>
+											<p class="publishers__col publishers__col_5">$0.60/500 impressions</p>
+										</div>
 									</div>
 									<div class="publishers__table-row">
 										<p class="publishers__col publishers__col_1">Zone Banners 468x60 example</p>
 										<p class="publishers__col publishers__col_2">Facebook style ads</p>
-										<p class="publishers__col publishers__col_3">$0.60/10 clicks </p>
-										<p class="publishers__col publishers__col_4">$0.60/500 impressions</p>
+										<div class="publishers__col publishers__col_3">
+											<p class="publishers__col publishers__col_4">$0.60/10 clicks </p>
+											<p class="publishers__col publishers__col_5">$0.60/500 impressions</p>
+										</div>
 									</div>
 									<div class="publishers__table-row">
 										<p class="publishers__col publishers__col_1">Zone Banners 468x60 example</p>
 										<p class="publishers__col publishers__col_2">Banners Full Size 468x60</p>
-										<p class="publishers__col publishers__col_3">$0.60/10 clicks </p>
-										<p class="publishers__col publishers__col_4">$0.60/500 impressions</p>
-									</div>
-									<div class="publishers__table-row">
-										<p class="publishers__col publishers__col_1">Zone Banners 468x60 example</p>
-										<p class="publishers__col publishers__col_2">Banners Full Size 468x60</p>
-										<p class="publishers__col publishers__col_3">$0.60/10 clicks </p>
-										<p class="publishers__col publishers__col_4">$0.60/500 impressions</p>
+										<div class="publishers__col publishers__col_3">
+											<p class="publishers__col publishers__col_4">$0.60/10 clicks </p>
+											<p class="publishers__col publishers__col_5">$0.60/500 impressions</p>
+										</div>
 									</div>
 								</div>
 							</div>
