--- a/src/css/blocks/publishers/payments-list.less
+++ b/src/css/blocks/publishers/payments-list.less
@@ -3,10 +3,7 @@
 	&__title{
 		color: #ffffff;
 		margin-bottom: 11px;
-		padding-left: 38px;
-		//padding-right: 42px;
-		display: inline-flex;
-		//justify-content: space-between;
+		display: flex;
 	}
 	&__title-item {
 		font-size: @14;
@@ -14,45 +11,45 @@
 		line-height: 1.29;
 		text-align: center;
 		&_1 {
-			margin-right: 95px;
+			width: 14%;
 		}
 		&_2 {
-			margin-right: 110px;
+			width: 16%;
 		}
 		&_3 {
-			margin-right: 80px;
+			width: 15%;
 		}
 		&_4 {
-			margin-right: 80px;
-			width: 140px;
+			width: 18%;
 		}
 		&_5 {
-			margin-right: 68px;
+			width: 15%;
 		}
 		&_6 {
-			margin-right: 55px;
+			width: 13%;
 		}
 		&_7 {
-			margin-right: 42px;
-			width: 90px;
+			width: 9%;
 		}
 
 	}
 	&__block {
 		border: 1px solid white;
-		padding: 18px 0 74px 42px;
+		padding: 18px 0 74px 0;
+		overflow: hidden;
 	}
 	&__inner {
 		max-height: 390px;
-		overflow: scroll;
-		overflow-x: auto;
+		overflow: auto;
+		overflow-x: hidden;
+		margin-right: -20px;
 	}
 	&__table-row {
 		display: flex;
 		margin-bottom: 41px;
 	}
 	&__col {
-		//text-align: center;
+		text-align: center;
 		font-size: @14;
 		line-height: 1.29;
 		color: #ffffff;
